add get all API
