# docs/swagger.yaml
@@ -109,6 +109,65 @@ paths:
       tags:
       - Application
   /api/v1/log:
+    get:
+      consumes:
+      - application/json
+      description: Get All Log
+      parameters:
+      - in: query
+        name: created_at
+        type: string
+      - in: query
+        name: end_date
+        type: string
+      - in: query
+        name: limit
+        type: integer
+      - in: query
+        name: order_by
+        type: string
+      - in: query
+        name: page
+        type: integer
+      - in: query
+        name: recipients
+        type: string
+      - in: query
+        name: request
+        type: string
+      - in: query
+        name: response
+        type: string
+      - in: query
+        name: sort_by
+        type: string
+      - in: query
+        name: source
+        type: string
+      - in: query
+        name: start_date
+        type: string
+      - in: query
+        name: status_code
+        type: integer
+      - in: query
+        name: updated_at
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/domain.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/domain.LogData'
+              type: object
+      summary: Get All Log
+      tags:
+      - Log
     post:
       consumes:
       - application/json
